...
    <string name="last_two_weeks">Last Two Weeks</string>
    <string name="last_month">Last Month</string>
    <string name="specific_period">Specific Period</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="not_at_all">Not at all</string>
    <string name="delete">delete</string>
    <string name="google_calendar_description">Serene wants to connect with your google calendar to get your events in order to perform correctly.</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="alert">Your email has not been verified.</string>
    <string name="empty">There are no upcoming appointments</string>
    <string name="tips">Quote of the day</string>
    <string name="minute">minute(s)</string>
...
    <string name="CurrentTime">The chosen time must after now</string>
    <string name="AppSavedSuccess">The Appointment Reminder Saved Successfully</string>
    <string name="AppSavedFialed">The Appointment Reminder Did not Saved, Try Again</string>

    <!-- Delete App Reminder Page -->
    <string name="AppDetails">Appointment</string>
    <string name="DeleteApp">Delete Appointment</string>
    <string name="DeleteMessageApp">Are you sure you want to delete this Appointment Reminder ? </string>
    <string name="DeleteOKApp">Delete</string>
    <string name="DeleteCancleApp">Cancel</string>
    <string name="AppDeletedSuccess">The Appointment Reminder Deleted Successfully</string>
    <string name="AppDeletedFialed">The Appointment Reminder Did not Deleted, Try Again</string>

    <!-- Add Medicine Reminder Page -->
    <string name="AddMed">New Medicine</string>
    <string name="SDMed">Starting from day</string>
    <string name="StartMedDate">Start</string>
    <string name="STMed">Time of first reminder</string>
...

    <!-- Edit Profile Page -->
    <string name="ChooseImage">Choose Image</string>
    <string name="OldPassET">Old Password</string>
    <string name="NewPassET">New Password</string>
    <string name="CNPassET">Confirm New password</string>
    <string name="ForgetPassSuccess">Reset Password was sent to Your Email Successfully</string>
    <string name="ForgetPassFialed">Try Again, Reset Password did not sent</string>
    <string name="EmptyName">Name Should not be Empty</string>
    <string name="NotCorrectName">* Enter valid name.</string>
    <string name="UpdateNameSuccess">Your Name Updated Successfully</string>
    <string name="UpdateNameFialed">Your Name did not Updated, Try Again</string>
    <string name="ImageUpSuccess">Your Image Profile Updated Successfully</string>
    <string name="SelectPicture">Select Image</string>
    <string name="ProfileInfoUpdateSuccess">Your Profile Information Updated Successfully</string>
    <string name="ProfileInfoUpdateFialed">Your Profile Information did not Updated, Try Again</string>
    <string name="DeleteAcc">Delete Account</string>
    <string name="DeleteMessageAcc">
        Deleting this account will result in completely removing your account from the system, you will not be able to access your account again.
    </string>
    <string name="DeleteOKAcc">Delete</string>
    <string name="DeleteCancleAcc">Cancel</string>
    <string name="AccDeletedSuccess">Your Account Deleted Successfully</string>
    <string name="AccDeletedFialed">Your Account Did not Deleted, Try Again</string>


    <!-- Edit Socio Page -->
    <string name="Socio">Edit Socio-demographic</string>
    <string name="NotCorrectAge">Please Enter Valid Age Value Between 5 to 110 Years Old</string>
...
    <string name="LogOutCancle">Cancel</string>
    <string name="LogOutSuccess">Your are Logged Out Successfully</string>
    <string name="LogOutFialed">Something Wrong, Try Again</string>

    <!-- Log in Page -->
    <string name="ForgetPass">Reset Password</string>
    <string name="ForgetPassMessage">
        If You Do not Know Your Current Password,
        You may Change it.
        Please Enter Your Email
    </string>
    <string name="ForgetPassOK">Request New Password</string>
    <string name="ForgetPassCancle">Cancel</string>
    <string name="EmptyEmail">Email Should not be Empty</string>
    <string name="NotCorrectEmail">Please, Enter Your Email Correctly.</string>
    <string name="NoUser">* There is not User With this Email, Please Try Again!</string>
    <string name="SocioNotFound">You Have First Complete The Registration Requirements Before Log in</string>

    <!-- Suign up Page -->
    <string name="NotValidName">* Enter valid name.</string>
    <string name="NotValidEmail">* Enter valid email.</string>
...
